# dhweb_app

./: .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  backup.sh  build.sh  conv.sh  docker-compose.yml  requirements.txt  shell.sh  wipe.sh
dh_abstracts/: Dockerfile  pyproject.toml  requirements.in  requirements.txt
dh_abstracts/app/: manage.py
dh_abstracts/app/abstracts/: admin.py  forms.py  models.py  urls.py  views.py
dh_abstracts/app/abstracts/fixtures/: test.json
dh_abstracts/app/abstracts/migrations/: 0001_initial.py  0003_auto_20190428_1731.py  0008_auto_20190430_1001.py  0009_auto_20190506_1016.py  0013_auto_20190522_1708.py  0015_auto_20190603_1430.py  0016_auto_20200330_1444.py  0017_auto_20200331_1642.py  0018_auto_20200331_1715.py  0019_auto_20200331_1723.py  0020_auto_20200401_0902.py  0021_work_url.py  0022_auto_20200401_0947.py  0023_work_user_last_updated.py  0024_authorship_user_last_updated.py  0025_author_appellations_index.py  0026_auto_20200403_1356.py  0027_affiliation_search_text.py  0027_auto_20200414_1127.py  0028_auto_20200414_1149.py  0029_auto_20200420_1131.py  0030_auto_20200421_1457.py  0031_conferencedocument.py  0032_auto_20200424_1220.py  0033_conference_full_text_public.py  0034_auto_20200428_1610.py  0035_license_default.py  0036_auto_20200429_1018.py  0037_auto_20200429_1208.py  0037_auto_20200430_1034.py  0038_merge_20200430_1058.py  0039_auto_20200430_1143.py  0040_auto_20200430_1143.py  0041_auto_20200430_1153.py  0042_auto_20200430_1206.py  (+34 more)
dh_abstracts/app/dhweb/: settings.py  urls.py  wsgi.py
(+269 files in other folders)
