[tool.poetry]
authors = ["Matthew Lincoln <matthew.d.lincoln@gmail.com>"]
description = ""
name = "dh_abstracts"
version = "0.1.0"

[tool.poetry.dependencies]
cssselect = "~1.1.0"
django = "~3.2.17"
django-autocomplete-light = "3.5.1"
django-coverage-plugin = "~2.0.2"
django-crispy-forms = "~1.11"
django-debug-toolbar = "~3.2.4"
django-filer = "~2.2"
django-libsass = "~0.9"
django-markdownify = "~0.9.1"
gunicorn = "~20.1.0"
lxml = "~4.9.1"
progress = "~1.6"
psycopg2-binary = "~2.9.3"
python = "~3.9"
python-memcached = "~1.59"
tblib = "~1.7.0"
w3lib = "~1.22.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
